test_suite/tests/ui/enum-representation/untagged-and-content.stderr
error: untagged enum cannot have #[serde(content = "...")]
 --> $DIR/tests/ui/enum-representation/untagged-and-content.rs:4:9
  |
4 | #[serde(untagged)]
  |         ^^^^^^^^

error: untagged enum cannot have #[serde(content = "...")]
 --> $DIR/tests/ui/enum-representation/untagged-and-content.rs:5:9
  |
5 | #[serde(content = "c")]
  |         ^^^^^^^
